修复任务运行时强制退出失效的 bug

--- a/csharp/GUI/Dialog/MessageDialog.xaml
+++ b/csharp/GUI/Dialog/MessageDialog.xaml
@@ -44,7 +44,8 @@
                 Content="{Binding ButtonText}"
                 IsDefault="True"
                 IsCancel="True"
-                Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
+                Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
+                Click="Button_Click">
             </Button>
         </StackPanel>
     </Grid>
