--- a/csharp/GUI/OptionTreeViewItem.xaml
+++ b/csharp/GUI/OptionTreeViewItem.xaml
@@ -62,6 +62,7 @@
                     <TextBlock Text="{Binding OptionInfo.Tips}" MaxWidth="320" TextWrapping="Wrap"/>
                 </Setter.Value>
             </Setter>
+            <Setter Property="ToolTipService.ShowDuration" Value="20000"/>
             <Setter Property="Cursor" Value="Help"/>
         </Style>
         <DataTemplate x:Key="String" d:DataType="{x:Type local:OptionViewModel}">
@@ -132,12 +133,18 @@
                     materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource ThemedIndigoBrush}"
                     ItemsSource="{Binding Path=OptionInfo.EnumChoices}"
                     SelectedIndex="{Binding ChoiceIndex}"
-                    ToolTip="{Binding RelativeSource={RelativeSource Mode=Self}, Path=SelectedItem.Label}">
+                    ToolTip="{Binding RelativeSource={RelativeSource Mode=Self}, Path=SelectedItem.Label}"
+                    ToolTipService.ShowDuration="20000">
                     <ComboBox.ItemTemplate>
                         <DataTemplate DataType="{x:Type framework:Choice}">
-                            <TextBlock Style="{StaticResource OptionTextBlock}" TextAlignment="Center" Text="{Binding Name}" Padding="0">
+                            <TextBlock
+                                Style="{StaticResource OptionTextBlock}"
+                                TextAlignment="Center"
+                                Text="{Binding Name}"
+                                Padding="0"
+                                ToolTipService.ShowDuration="20000">
                                 <TextBlock.ToolTip>
-                                    <TextBlock Text="{Binding Label}" MaxWidth="320" TextWrapping="Wrap"/>
+                                    <TextBlock Text="{Binding Label}" MaxWidth="320" TextWrapping="Wrap" TextAlignment="Left"/>
                                 </TextBlock.ToolTip>
                             </TextBlock>
                         </DataTemplate>
@@ -151,7 +158,7 @@
             <ColumnDefinition/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <ContentControl x:Name="TaskStatusContentControl" Grid.Column="0" Content="{Binding}">
+        <ContentControl Grid.Column="0" Content="{Binding}">
             <ContentControl.ContentTemplateSelector>
                 <local:OptionTreeViewItemTemplateSelector
                     StringTemplate="{StaticResource String}"
@@ -160,18 +167,6 @@
                     BooleanTemplate="{StaticResource Boolean}"
                     EnumTemplate="{StaticResource Enum}"/>
             </ContentControl.ContentTemplateSelector>
-            <d:ContentControl.Content>
-                <StackPanel Orientation="Horizontal">
-                    <ToggleButton
-                        x:Name="AutoDetectToggle"
-                        VerticalAlignment="Center"
-                        Style="{StaticResource MaterialDesignSwitchToggleButton}"
-                        Width="40"
-                        Height="20"
-                        Cursor="Hand"/>
-                    <TextBlock x:Name="AutoDetectText" VerticalAlignment="Center" Text="自动检测导入格式"/>
-                </StackPanel>
-            </d:ContentControl.Content>
         </ContentControl>
         <materialDesign:PackIcon Grid.Column="1" Style="{StaticResource OptionTipsIcon}"/>
     </Grid>
