修复下拉选项框中的纵向滚动条不会变亮的问题；增大输入输出格式下拉选项框的最大高度

--- a/csharp/GUI/OptionTreeViewItem.xaml
+++ b/csharp/GUI/OptionTreeViewItem.xaml
@@ -135,6 +135,9 @@
                     SelectedIndex="{Binding ChoiceIndex}"
                     ToolTip="{Binding RelativeSource={RelativeSource Mode=Self}, Path=SelectedItem.Label}"
                     ToolTipService.ShowDuration="20000">
+                    <ComboBox.Resources>
+                        <Style TargetType="ScrollViewer" BasedOn="{StaticResource OptimizedScrollViewer}"/>
+                    </ComboBox.Resources>
                     <ComboBox.ItemTemplate>
                         <DataTemplate DataType="{x:Type framework:Choice}">
                             <TextBlock
