--- a/csharp/GUI/MainWindow.xaml
+++ b/csharp/GUI/MainWindow.xaml
@@ -571,6 +571,7 @@
                                 <Setter Property="Padding" Value="16 5"/>
                                 <Setter Property="Height" Value="45"/>
                                 <Setter Property="FontSize" Value="14"/>
+                                <Setter Property="MaxDropDownHeight" Value="600"/>
                                 <Setter Property="materialDesign:HintAssist.HintOpacity" Value="1"/>
                                 <Setter Property="materialDesign:HintAssist.Foreground" Value="{StaticResource ThemedHighContrastIndigoBrush}"/>
                                 <Setter Property="materialDesign:TextFieldAssist.UnderlineBrush" Value="{StaticResource ThemedIndigoBrush}"/>
@@ -644,6 +645,9 @@
                                         ItemsSource="{Binding Plugins}"
                                         SelectedIndex="{Binding SelectedInputPluginIndex}"
                                         SelectionChanged="ImportPluginComboBox_SelectionChanged">
+                                        <ComboBox.Resources>
+                                            <Style TargetType="ScrollViewer" BasedOn="{StaticResource OptimizedScrollViewer}"/>
+                                        </ComboBox.Resources>
                                     </ComboBox>
                                     <materialDesign:PopupBox
                                         Grid.Row="0"
@@ -711,7 +715,11 @@
                                         materialDesign:HintAssist.Hint="导出工程格式"
                                         ItemsSource="{Binding Plugins}"
                                         SelectedIndex="{Binding SelectedOutputPluginIndex}"
-                                        SelectionChanged="ExportPluginComboBox_SelectionChanged"/>
+                                        SelectionChanged="ExportPluginComboBox_SelectionChanged">
+                                        <ComboBox.Resources>
+                                            <Style TargetType="ScrollViewer" BasedOn="{StaticResource OptimizedScrollViewer}"/>
+                                        </ComboBox.Resources>
+                                    </ComboBox>
                                     <materialDesign:PopupBox
                                         Grid.Row="0"
                                         Grid.Column="1"
