修复在文本框输入回车后快捷键失效的bug；移除元素被选中时周围出现的虚线框

--- a/csharp/GUI/Dialog/PathManagerDialog.xaml
+++ b/csharp/GUI/Dialog/PathManagerDialog.xaml
@@ -107,7 +107,8 @@
                             Visibility="{Binding Visibility, ElementName=PathListView}"
                             VerticalScrollBarVisibility="Auto"
                             PanningMode="VerticalOnly"
-                            MaxHeight="{Binding ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Border}, Converter={StaticResource DoubleConstantSubConverter}, ConverterParameter=60}">
+                            MaxHeight="{Binding ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Border}, Converter={StaticResource DoubleConstantSubConverter}, ConverterParameter=60}"
+                            Focusable="True">
                             <ItemsControl
                                 x:Name="PathListView"
                                 ItemsSource="{Binding CustomExportPaths}"
