--- a/csharp/GUI/App.xaml
+++ b/csharp/GUI/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:OpenSvip.GUI"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             Startup="Application_StartUp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -70,7 +71,7 @@
                     </Binding>
                 </SolidColorBrush.Color>
             </SolidColorBrush>
-             <SolidColorBrush
+            <SolidColorBrush
                 x:Key="ThemedLowContrastGreyscaleBrush">
                 <SolidColorBrush.Color>
                     <Binding
@@ -86,7 +87,7 @@
                     </Binding>
                 </SolidColorBrush.Color>
             </SolidColorBrush>
-           <SolidColorBrush
+            <SolidColorBrush
                 x:Key="ThemedIndigoBrush">
                 <SolidColorBrush.Color>
                     <Binding
